--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -54,11 +54,19 @@
 								</div>
 							</div>
 							<div class="form-row">
-								<!-- City -->
+								<!-- Area -->
 								<div class="col-md-12 mb-3">
-									<label class="sr-only">City</label>
-									<input type="text" name="city" class="form-control" placeholder="City"
-									value="{{ values.city }}">
+									<label class="sr-only">Area</label>
+									<select name="bedrooms" class="form-control">
+										<option selected="true" disabled="disabled">Area</option>
+										{% for key,value in lga_choices.items %}
+											<option value="{{ key }}"
+												{% if key == values.lga %}
+													selected
+												{% endif %}
+											>{{ value }}</option>
+										{% endfor %}
+									</select>
 								</div>
 							</div>
 							<!-- Price -->
