--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -57,7 +57,7 @@
 								<!-- Area -->
 								<div class="col-md-12 mb-3">
 									<label class="sr-only">Area</label>
-									<select name="bedrooms" class="form-control">
+									<select name="lga" class="form-control">
 										<option selected="true" disabled="disabled">Area</option>
 										{% for key,value in lga_choices.items %}
 											<option value="{{ key }}"
