--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -57,16 +57,8 @@
 								<!-- Area -->
 								<div class="col-md-12 mb-3">
 									<label class="sr-only">Area</label>
-									<select name="lga" class="form-control">
-										<option selected="true" disabled="disabled">Area</option>
-										{% for key,value in lga_choices.items %}
-											<option value="{{ key }}"
-												{% if key == values.lga %}
-													selected
-												{% endif %}
-											>{{ value }}</option>
-										{% endfor %}
-									</select>
+									<input type="text" name="Area" class="form-control" placeholder="Area"
+									value="{{ values.lga }}">
 								</div>
 							</div>
 							<!-- Price -->
